--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,21 +2,19 @@ name: Run Input_Data.py
 
 on:
   schedule:
-    # Run every 1 hour instead of 15 mins
+    # Runs every hour at minute 0
     - cron: '0 * * * *'
   workflow_dispatch:
-
-concurrency:
-  group: input-data-job
-  cancel-in-progress: false
 
 jobs:
   run-dump:
     runs-on: ubuntu-latest
 
+    timeout-minutes: 30
+
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Python 3.11
         uses: actions/setup-python@v5
@@ -28,7 +26,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Execute Input_Data.py
+      - name: Execute Input_Data.py safely
         env:
           PRABHAT_SECRET_KEY: ${{ secrets.PRABHAT_SECRET_KEY }}
           SERVICE_ACCOUNT_JSON: ${{ secrets.SERVICE_ACCOUNT_JSON }}
@@ -38,6 +36,26 @@ jobs:
           SHEET_ACCESS_KEY: ${{ secrets.SHEET_ACCESS_KEY }}
 
         run: |
+          LOCK_FILE=".Input_Data.lock"
+
           echo "Workflow triggered at: $(date -u)"
+
+          if [ -f $LOCK_FILE ]; then
+            echo "⚠️ Previous run still in progress. Exiting."
+            exit 0
+          fi
+
+          touch $LOCK_FILE
           echo "🚀 Running Input_Data.py..."
+
           python Input_Data.py
+          EXIT_CODE=$?
+
+          rm -f $LOCK_FILE
+
+          if [ $EXIT_CODE -eq 0 ]; then
+            echo "✅ Automation completed successfully!"
+          else
+            echo "❌ Automation failed with exit code $EXIT_CODE"
+            exit $EXIT_CODE
+          fi
